--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.456.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -44,5 +45,6 @@
     "tailwindcss": "^3.4.14",
     "util": "^0.12.5",
     "vite": "^5.4.10"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
