--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.28.0",
+    "react-toastify": "^10.0.6",
     "statcheck-frontend": "file:",
     "vite-plugin-node-polyfills": "^0.22.0"
   },
